@@ -4,8 +4,9 @@ gcl (2.6.1-32) unstable; urgency=low
     compiled in external function addresses in plt.c
   * No need to explicitly write cr-lf on windows
   * Autodetection of machine on FreeBSD
+  * Updated defs and h files for FreeBSD courtesy of Mark Murray
 
- -- Camm Maguire <camm@enhanced.com>  Mon,  8 Mar 2004 21:46:26 +0000
+ -- Camm Maguire <camm@enhanced.com>  Mon,  8 Mar 2004 21:57:24 +0000
 
 gcl (2.6.1-31) unstable; urgency=low
 
